logs/msgtools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/msgtools'...
Listing './lib/python3.5/site-packages/msgtools/console'...
Listing './lib/python3.5/site-packages/msgtools/goodlistener'...
Listing './lib/python3.5/site-packages/msgtools/inspector'...
Listing './lib/python3.5/site-packages/msgtools/lib'...
Listing './lib/python3.5/site-packages/msgtools/lumberjack'...
Listing './lib/python3.5/site-packages/msgtools/multilog'...
Listing './lib/python3.5/site-packages/msgtools/noisemaker'...
Listing './lib/python3.5/site-packages/msgtools/parser'...
Listing './lib/python3.5/site-packages/msgtools/parser/c'...
Listing './lib/python3.5/site-packages/msgtools/parser/cpp'...
Listing './lib/python3.5/site-packages/msgtools/parser/html'...
Listing './lib/python3.5/site-packages/msgtools/parser/java'...
Listing './lib/python3.5/site-packages/msgtools/parser/javascript'...
Listing './lib/python3.5/site-packages/msgtools/parser/matlab'...
Listing './lib/python3.5/site-packages/msgtools/parser/python'...
Compiling './lib/python3.5/site-packages/msgtools/parser/python/HeaderTemplate.py'...
***   File "./lib/python3.5/site-packages/msgtools/parser/python/HeaderTemplate.py", line 14
    class <MSGNAME> :
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/msgtools/parser/python/Template.py'...
***   File "./lib/python3.5/site-packages/msgtools/parser/python/Template.py", line 14
    class <MSGNAME> :
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/msgtools/parser/swift'...
Listing './lib/python3.5/site-packages/msgtools/scope'...
Listing './lib/python3.5/site-packages/msgtools/server'...
Listing './lib/python3.5/site-packages/msgtools-0.28.18.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
